--- a/single_camera_acquisition.ipynb
+++ b/single_camera_acquisition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,20 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pyrealsense2.pyrealsense2.pipeline_profile at 0x223f3990688>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configure depth and color streams\n",
     "pipeline = rs.pipeline()\n",
@@ -44,7 +33,169 @@
     "# config.enable_stream(rs.stream.color, 640, 480, rs.format.bgr8, 30)\n",
     "\n",
     "# Start streaming\n",
-    "pipeline.start(config)"
+    "prof = pipeline.start(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = prof.get_device()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_sensors = device.query_sensors()[0] # 1 for RGB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_info(): incompatible function arguments. The following argument types are supported:\n    1. (self: pyrealsense2.pyrealsense2.sensor, info: pyrealsense2.pyrealsense2.camera_info) -> str\n\nInvoked with: <pyrealsense2.pyrealsense2.sensor object at 0x00000210B6338D88>, 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-bd05cfe19c26>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mir_sensors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: get_info(): incompatible function arguments. The following argument types are supported:\n    1. (self: pyrealsense2.pyrealsense2.sensor, info: pyrealsense2.pyrealsense2.camera_info) -> str\n\nInvoked with: <pyrealsense2.pyrealsense2.sensor object at 0x00000210B6338D88>, 0"
+     ]
+    }
+   ],
+   "source": [
+    "ir_sensors.get_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ir_sensors.is_depth_sensor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__members__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'accuracy',\n",
+       " 'asic_temperature',\n",
+       " 'auto_exposure_converge_step',\n",
+       " 'auto_exposure_mode',\n",
+       " 'auto_exposure_priority',\n",
+       " 'backlight_compensation',\n",
+       " 'brightness',\n",
+       " 'color_scheme',\n",
+       " 'confidence_threshold',\n",
+       " 'contrast',\n",
+       " 'depth_units',\n",
+       " 'emitter_enabled',\n",
+       " 'emitter_on_off',\n",
+       " 'enable_auto_exposure',\n",
+       " 'enable_auto_white_balance',\n",
+       " 'enable_motion_correction',\n",
+       " 'error_polling_enabled',\n",
+       " 'exposure',\n",
+       " 'filter_magnitude',\n",
+       " 'filter_option',\n",
+       " 'filter_smooth_alpha',\n",
+       " 'filter_smooth_delta',\n",
+       " 'frames_queue_size',\n",
+       " 'gain',\n",
+       " 'gamma',\n",
+       " 'histogram_equalization_enabled',\n",
+       " 'holes_fill',\n",
+       " 'hue',\n",
+       " 'inter_cam_sync_mode',\n",
+       " 'laser_power',\n",
+       " 'max_distance',\n",
+       " 'min_distance',\n",
+       " 'motion_module_temperature',\n",
+       " 'motion_range',\n",
+       " 'output_trigger_enabled',\n",
+       " 'power_line_frequency',\n",
+       " 'projector_temperature',\n",
+       " 'saturation',\n",
+       " 'sharpness',\n",
+       " 'stereo_baseline',\n",
+       " 'stream_filter',\n",
+       " 'stream_format_filter',\n",
+       " 'stream_index_filter',\n",
+       " 'texture_source',\n",
+       " 'total_frame_drops',\n",
+       " 'visual_preset',\n",
+       " 'white_balance']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(rs.option.enable_auto_exposure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_sensors.set_option(rs.option.enable_auto_exposure,0)"
    ]
   },
   {
@@ -216,11 +367,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# preview only!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__nonzero__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'as_depth_sensor',\n",
+       " 'as_roi_sensor',\n",
+       " 'close',\n",
+       " 'get_info',\n",
+       " 'get_option',\n",
+       " 'get_option_description',\n",
+       " 'get_option_range',\n",
+       " 'get_option_value_description',\n",
+       " 'get_stream_profiles',\n",
+       " 'is_depth_sensor',\n",
+       " 'is_option_read_only',\n",
+       " 'is_roi_sensor',\n",
+       " 'open',\n",
+       " 'profiles',\n",
+       " 'set_notifications_callback',\n",
+       " 'set_option',\n",
+       " 'start',\n",
+       " 'stop',\n",
+       " 'supports']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(ir_sensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__members__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'accuracy',\n",
+       " 'asic_temperature',\n",
+       " 'auto_exposure_converge_step',\n",
+       " 'auto_exposure_mode',\n",
+       " 'auto_exposure_priority',\n",
+       " 'backlight_compensation',\n",
+       " 'brightness',\n",
+       " 'color_scheme',\n",
+       " 'confidence_threshold',\n",
+       " 'contrast',\n",
+       " 'depth_units',\n",
+       " 'emitter_enabled',\n",
+       " 'emitter_on_off',\n",
+       " 'enable_auto_exposure',\n",
+       " 'enable_auto_white_balance',\n",
+       " 'enable_motion_correction',\n",
+       " 'error_polling_enabled',\n",
+       " 'exposure',\n",
+       " 'filter_magnitude',\n",
+       " 'filter_option',\n",
+       " 'filter_smooth_alpha',\n",
+       " 'filter_smooth_delta',\n",
+       " 'frames_queue_size',\n",
+       " 'gain',\n",
+       " 'gamma',\n",
+       " 'histogram_equalization_enabled',\n",
+       " 'holes_fill',\n",
+       " 'hue',\n",
+       " 'inter_cam_sync_mode',\n",
+       " 'laser_power',\n",
+       " 'max_distance',\n",
+       " 'min_distance',\n",
+       " 'motion_module_temperature',\n",
+       " 'motion_range',\n",
+       " 'output_trigger_enabled',\n",
+       " 'power_line_frequency',\n",
+       " 'projector_temperature',\n",
+       " 'saturation',\n",
+       " 'sharpness',\n",
+       " 'stereo_baseline',\n",
+       " 'stream_filter',\n",
+       " 'stream_format_filter',\n",
+       " 'stream_index_filter',\n",
+       " 'texture_source',\n",
+       " 'total_frame_drops',\n",
+       " 'visual_preset',\n",
+       " 'white_balance']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(rs.option)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example getting options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exposure: 500.0\n",
+      "Min: 1.0 Max: 165000.0 Default: 8500.0 Step: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp = ir_sensors.get_option(rs.option.exposure)\n",
+    "lims = ir_sensors.get_option_range(rs.option.exposure)\n",
+    "print('Exposure: {0}'.format(exp))\n",
+    "print('Min: {0} Max: {1} Default: {2} Step: {3}'.format(lims.min, lims.max, \n",
+    "                                                       lims.default, lims.step))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ir_sensors.get_option(rs.option.gain)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example setting options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_sensors.set_option(rs.option.enable_auto_exposure,0)\n",
+    "ir_sensors.set_option(rs.option.exposure,500)\n",
+    "ir_sensors.set_option(rs.option.gain,32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%timeit\n",
+    "# frames = pipeline.wait_for_frames()\n",
+    "cv2.namedWindow('Infrared', cv2.WINDOW_AUTOSIZE)\n",
+    "while True:\n",
+    "    frames = pipeline.wait_for_frames()\n",
+    "    left = frames.get_infrared_frame(1)\n",
+    "    right = frames.get_infrared_frame(2)\n",
+    "    if not left or not right:\n",
+    "        continue\n",
+    "    left, right = np.asanyarray(left.get_data()), np.asanyarray(right.get_data())\n",
+    "    stacked = np.hstack((left,right))\n",
+    "    cv2.imshow('Infrared', stacked)\n",
+    "    key = cv2.waitKey(10)\n",
+    "    if key==27:\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
    ]
   }
  ],
