more changes to allow config yaml files instead of options

--- a/testing_yaml.ipynb
+++ b/testing_yaml.ipynb
@@ -147,7 +147,28 @@
     }
    ],
    "source": [
-    "blah == config['cams']['eye']['options']"
+    "(self,serial,\n",
+    "                 start_t=None,height=None,width=None,save=False,savedir=None,experiment=None, name=None,\n",
+    "        movie_format='opencv',metadata_format='hdf5', uncompressed=False,preview=False,verbose=False,options=None,\n",
+    "        strobe=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(self,serial,\n",
+    "                 start_t=None,\n",
+    " height=None,\n",
+    " width=None,\n",
+    " save=False,\n",
+    " savedir=None,\n",
+    " experiment=None, \n",
+    " name=None,\n",
+    "movie_format='hdf5',metadata_format='hdf5', uncompressed=False,preview=False,verbose=False,options=None, \n",
+    "        master=False)"
    ]
   }
  ],
